--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  word-break: break-word;
 }
 
 a {
@@ -13,4 +14,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.ql-editor {
+  font-size:1rem;
 }
